--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <li>
                             <i class="fal fa-phone"></i>
                             <a href="tel: 9841937389">Linghesh - 9841937389</a>
+                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
                             
                         </li>
                     </ul>
