--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" conQtent="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
         <title>YUVA CGT 5.0</title>
         <!--====== Favicon Icon ======-->
