--- a/Event - CGT REC.html
+++ b/Event - CGT REC.html
@@ -51,8 +51,9 @@
                             <a href="mailto:yuva@rajalakshmi.edu.in">yuva@rajalakshmi.edu.in</a>
                         </li>
                         <li>
-                            <i class="fal fa-phone"></i>
-                            <a href="tel:8667060010">Richard - 86670 60010</a>
+                           <i class="fal fa-phone"></i>
+                            <a href="tel: 9841937389">Linghesh - 9841937389</a>
+                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
                             
                         </li>
                     </ul>
