--- a/team.html
+++ b/team.html
@@ -426,7 +426,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
-                                <img src="assets/images/team/Srinithi (1).jpg" alt="">
+                                <img src="assets/images/team/Srinidhi D.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                
@@ -1350,7 +1350,7 @@
                                                 <div class="col-lg-3 col-md-6 col-sm-6">
                                                     <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
                                                         <div class="img-holder">
-                                                            <img src="assets/images/team/varsha.jpeg" alt="">
+                                                            <img src="assets/images/team/sre varsha.png" alt="">
                                                         </div>
                                                         <div class="text text-center">   
                                                             <h4><a><br>Varsha N</a></h4>
