--- a/team.html
+++ b/team.html
@@ -330,7 +330,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
-                                <img src="assets/images/team/Jeffery (1).jpg" alt="">
+                                <img src="assets/images/team/jeffrey.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                
