--- a/team.html
+++ b/team.html
@@ -2638,12 +2638,12 @@
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
                                                         <div class="team-item mb-55 ">
                                                             <div class="img-holder">
-                                                                <img src="assets/images/team/mithran1.jpeg" alt="">
+                                                                <img src="assets/images/team/jeff.jpg" alt="">
                                                             </div>
                                                             <div class="text text-center">
                                                                
-                                                                <h4><a><br>Mitran </a></h4>
-                                                                <p class="position">Chair-Sports</p>
+                                                                <h4><a><br>Jeffrey Hamlin V</a></h4>
+                                                                <p class="position">Co Chair-Sports</p>
                                                             </div>
                                                         </div>
                                                     </div>
