--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         </li>
                         <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel:8667060010">Richard - 86670 60010</a>
+                            <a href="tel:9841937389">Linghesh-9841937389</a>
                             
                         </li>
                     </ul>
@@ -243,8 +243,8 @@
                                             </div>
                                             <div class="info">
                                                 <h4>Phone Number</h4>
-                                                <p><a href="tel:8667060010">Richard    : +91 8667060010</a></p>
-                                                <p><a href="tel:6385486230">Siva Santhosh   : +91 6385486230</a></p>
+                                                <p><a href="tel:9841937389">Linghesh-9841937389</a></p>
+                                                <p><a href="tel:9894376855">Nandhini-9894376855</a></p>
                                             </div>
                                         </div>
                                     </div>
