--- a/Gallery.html
+++ b/Gallery.html
@@ -53,7 +53,7 @@
                 <li>
                     <i class="fal fa-phone"></i>
                             <a href="tel: 9841937389">Linghesh - 9841937389</a>
-                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
+                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
                     
                 </li>
             </ul>
@@ -133,6 +133,30 @@
         <section class="team-area team-area-v2 pt-30 pb-130">
             <div class="container">
                 <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Walk Along 2.0.png" alt="">
+                                <a href="assets/images/portfolio/Walk Along 2.0.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/CGT 5.0.png" alt="">
+                                <a href="assets/images/portfolio/CGT 5.0.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/CGT 5.0 REC.png" alt="">
+                                <a href="assets/images/portfolio/CGT 5.0 REC.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
