--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -170,7 +170,7 @@
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
-                                <p></p>
+                                <p>Arts and Culture</p>
                             </div>
                         </div>
                     </div>
