--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -137,7 +137,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/Events/CGT 5.0/CGT 5.0.jpg" alt="">
+                                <img src="assets/images/Events/CGT 5.0 OUT/CGT 5.0.jpg" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
