--- a/Event - CGT REC.html
+++ b/Event - CGT REC.html
@@ -236,7 +236,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".25s">
                             <div class="img-holder">
-                                <img src="assets\images\Events\CGT 5.0\CGT4.JPG"alt="">
+                                <img src="assets\images\Events\CGT 5.0\CGT4.png"alt="">
                             </div>
                            
                         </div>
