Update Event - CGT REC.html

--- a/Event - CGT REC.html
+++ b/Event - CGT REC.html
@@ -168,7 +168,7 @@
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
-                                <p>Art and Culture</p>
+                                <p>Arts and Culture</p>
                             </div>
                         </div>
                     </div>
