--- a/Initiatives.html
+++ b/Initiatives.html
@@ -55,8 +55,7 @@
                         <li>
                             <i class="fal fa-phone"></i>
                             <a href="tel: 9841937389">Linghesh - 9841937389</a>
-                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
-                            
+                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
                         </li>
                     </ul>
                 </div>
@@ -164,7 +163,56 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/CGT 5.0.png" alt="Img">
+                                <a href="Event - CGT 5.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
+                                <a class="cat-link">18/08/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Walk Along 2.0.png" alt="Img">
+                                <a href="Event - Walk Along 2.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Walk Along 2.0.html">Walk Along 2.0</a></h3>
+                                <a class="cat-link">11/08/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/CGT 5.0 REC.png" alt="Img">
+                                <a href="Event - CGT 5.0 REC.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - CGT 5.0 REC.html">CGT 5.0 REC</a></h3>
+                                <a class="cat-link">25/07/2024</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
