--- a/Initiatives.html
+++ b/Initiatives.html
@@ -11,7 +11,7 @@
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
-        <link rel="stylesheet" href="assets/css/default.css">
+        <link rel="stylesheet" href="assets/css/default.css4
         <!--====== Style css ======-->
         <link rel="stylesheet" href="assets/css/style.css">
         <!--====== Responsive css ======-->
@@ -176,7 +176,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
+                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0 REC</a></h3>
                                 <a class="cat-link">18/08/2024</a>
                             </div>
                         </div>
