Update Event - CGT REC.html

--- a/Event - CGT REC.html
+++ b/Event - CGT REC.html
@@ -120,7 +120,7 @@
                             <h1>Events & Projects</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">CGT 5.0</li>
+                                <li class="active">CGT 5.0 REC</li>
                             </ul>
                         </div>
                     </div>
