--- a/Initiatives.html
+++ b/Initiatives.html
@@ -208,7 +208,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT 5.0 REC.html">CGT 5.0 REC</a></h3>
+                                <h3 class="title"><a href="Event - CGT REC.html">CGT 5.0 REC</a></h3>
                                 <a class="cat-link">25/07/2024</a>
                             </div>
                         </div>
