--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -171,7 +171,7 @@
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
-                                <p></p>
+                                <p>Arts And Culture</p>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Talented PPL of Chennai</p>
+                                <p>Talented People of Chennai</p>
                             </div>
                         </div>
                     </div>
