--- a/Gallery.html
+++ b/Gallery.html
@@ -136,24 +136,24 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Walk Along 2.0.png" alt="">
-                                <a href="assets/images/portfolio/Walk Along 2.0.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/CGT 5.0 OUT/gallery-cgt5.0.png" alt="">
+                                <a href="assets/images/Events/CGT 5.0 OUT/gallery-cgt5.0.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/CGT 5.0.png" alt="">
-                                <a href="assets/images/portfolio/CGT 5.0.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Walk Along 2.0/gallery-walkalong2.0.png" alt="">
+                                <a href="assets/images/Events/Walk Along 2.0/gallery-walkalong2.0.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/CGT 5.0 REC.png" alt="">
-                                <a href="assets/images/portfolio/CGT 5.0 REC.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/CGT 5.0/gallery-cgt-rec.png" alt="">
+                                <a href="assets/images/Events/CGT 5.0/gallery-cgt-rec.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
