--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -91,8 +91,8 @@
                         </li>
                         <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel: 9841937389">Linghesh - 9841937389</a>
-                            <a href="tel: 9894376855">Nandhini - 9894376855</a>
+                            <a href="tel: 9841937389">Linghesh B - 9841937389</a>
+                            <a href="tel: 9894376855">Nandhini R - 9894376855</a>
                             
                         </li>
                     </ul>
