Update Event - Addiction prevention.html

--- a/Event - Addiction prevention.html
+++ b/Event - Addiction prevention.html
@@ -51,9 +51,9 @@
                         <a href="mailto:yuva@rajalakshmi.edu.in">yuva@rajalakshmi.edu.in</a>
                     </li>
                     <li>
-                        <i class="fal fa-phone"></i>
-                        <a href="tel:8667060010">Richard - 86670 60010</a>
-                            <a href="tel:6385486230">Siva Santhosh - 63854 86230</a>
+                       <i class="fal fa-phone"></i>
+                            <a href="tel: 9841937389">Linghesh B - 9841937389</a>
+                            <a href="tel: 9894376855">Nandhini R- 9894376855</a>
                     </li>
                 </ul>
             </div>
