--- a/Event - Puthuyirppu.html
+++ b/Event - Puthuyirppu.html
@@ -50,9 +50,9 @@
                         <a href="mailto:yiyuva2019@gmail.com">yiyuva2019@gmail.com</a>
                         <a href="mailto:yuva@rajalakshmi.edu.in">yuva@rajalakshmi.edu.in</a>
                     </li>
-                    <li>
-                        <i class="fal fa-phone"></i>
-                        <a href="tel:8667060010">Richard - 86670 60010</a>
+                    <li><i class="fal fa-phone"></i>
+                            <a href="tel: 9841937389">Linghesh B - 9841937389</a>
+                            <a href="tel: 9894376855">Nandhini R- 9894376855</a>
                             
                     </li>
                 </ul>
