--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/voicingthewhispers.jpg" alt="Img">
-                            <a href="Event - Voicing the Whispers.html" class="portfolio-hover ">
+                            <a href="Event - Voicing the whispers.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
