--- a/team.html
+++ b/team.html
@@ -307,7 +307,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
                             <div class="img-holder">
-                                <img src="assets/images/team/thrisha (1).jpg" alt="">
+                                <img src="assets/images/team/thrisha(2).png" alt="">
                             </div>
                             <div class="text text-center">
                                
