--- a/team.html
+++ b/team.html
@@ -284,7 +284,7 @@
                             <div class="img-holder">
                                 <img src="assets/images/team/vasanth.png" alt="">
                             </div>
-                            <div class="text text-center">
+                            <div class="text text-center"
                                 
                                 <h4><a><br>Vasanth B</a></h4>
                                 <p class="position">Chair - Climate Change</p>
