--- a/team.html
+++ b/team.html
@@ -1035,8 +1035,8 @@
                                                             </div>
                                                             <div class="text text-center">
                                                                
-                                                                <h4><a><br>Co Chair-Climate Change</a></h4>
-                                                                <p class="position">Chair - Masoom</p>
+                                                                <h4><a><br>Linghesh B</a></h4>
+                                                                <p class="position">Co Chair-Climate Change</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1103,7 +1103,7 @@
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
                                                         <div class="team-item mb-55 ">
                                                             <div class="img-holder">
-                                                                <img src="assets/images/team/thrisha (1).jpg" alt="">
+                                                                <img src="assets/images/team/Thrisha.png" alt="">
                                                             </div>
                                                             <div class="text text-center">
                                                                 
