--- a/Initiatives.html
+++ b/Initiatives.html
@@ -968,11 +968,11 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
+               <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/voicingthewhispers.jpg" alt="Img">
-                            <a href="Event - Voicing the Whispers.html" class="portfolio-hover ">
+                            <a href="Event - Voicing the whispers.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
