--- a/Initiatives.html
+++ b/Initiatives.html
@@ -979,7 +979,7 @@
                             </a>
                         </div>
                         <div class="text">
-                            <h3 class="title"><a href="Event - Voicing the Whispers.html">Voicing the Whispers</a></h3>
+                            <h3 class="title"><a href="Event - Voicing the whispers.html">Voicing the Whispers</a></h3>
                             <a class="cat-link">06/03/2022</a>
                         </div>
                     </div>
