--- a/team.html
+++ b/team.html
@@ -286,7 +286,7 @@
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Vasanth B</a></h4>
+                                <h4><a><br>Vasanth B</br></a></h4>
                                 <p class="position">Chair - Climate Change</p>
                             </div>
                         </div>
