--- a/team.html
+++ b/team.html
@@ -845,7 +845,7 @@
                             <div class="text text-center">
                                 
                                 <h4><a><br>Priyadharshini S</a></h4>
-                                <p class="position">Photography</p>
+                                <p class="position">Photography and Vedio Editing</p>
                             </div>
                         </div>
                     </div>
