--- a/podcast.html
+++ b/podcast.html
@@ -333,6 +333,7 @@
                             </div>
                         </div>
                     </div>
+                    <center>
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
@@ -350,7 +351,8 @@
                         </div>
                     </div> 
                 </div>
-            </div>    
+            </div> 
+            </center>
             <hr>
             <center><h4>Season-01</h4></center>
             <hr>
