--- a/podcast.html
+++ b/podcast.html
@@ -45,7 +45,7 @@
                     <h5 class="panel-widget-title">Contact Us</h5>
                     <ul>
                         <li>
-                            <i class="fal fa-map-marker-alt"></i>Rajalakshmi Engineering College, Rajalakshmi Nagar Thandalam, Chennai - 602 105.
+                            <i class="fal fa-map-marker-alt"></i>Rajalakshmi Engineering College, Rajalakshmi Nagar, Thandalam, Chennai - 602 105.
                         </li>
                         <li>
                             <i class="fal fa-envelope-open"></i>
@@ -54,8 +54,8 @@
                         </li>
                         <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel: 9841937389">Linghesh B - 9841937389</a>
-                            <a href="tel: 9894376855">Nandhini R - 9894376855</a>
+                            <a href="tel:8667060010">Linghesh B -  9841937389</a>
+                            <a href="tel:9894376855">Nandhini R - 9894376855</a>
                         </li>
                     </ul>
                 </div>
@@ -133,7 +133,7 @@
         <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <hr>
-            <center><h2>Season-02</h2></center>
+            <center><h4>Season-02</h4></center>
             <hr>
             <div class="container">   
                 <div class="row portfolio-grid">
@@ -320,7 +320,23 @@
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12 cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
                             <div class="img-holder">
-                                
+                                <img src="assets/images/podcast/Podcast s-02 ep-1.png" alt="Img">
+                                <a href="https://open.spotify.com/episode/7ooxMx5jBfVdGdYiJinvzx?si=y_nl9TJrTwW8HIGCQPDl0w&utm_source=copy-link" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div  style="text-align: center;" class="text">
+                                <h3 class="title"><a href="https://open.spotify.com/episode/7ooxMx5jBfVdGdYiJinvzx?si=y_nl9TJrTwW8HIGCQPDl0w&utm_source=copy-link"></a>Beyond The Whistles</h3>
+                                <p>Kick off the season with IPL, the talk of the town!</p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                            
                                 <a href="" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -332,25 +348,9 @@
                                 <p></p>
                             </div>
                         </div>
-                    </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
-                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
-                            <div class="img-holder">
-                                <img src="assets/images/podcast/Podcast s-02 ep-1.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/7ooxMx5jBfVdGdYiJinvzx?si=y_nl9TJrTwW8HIGCQPDl0w&utm_source=copy-link" class="portfolio-hover">
-                                    <div class="hover-content">
-                                        <i class="far fa-external-link"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/7ooxMx5jBfVdGdYiJinvzx?si=y_nl9TJrTwW8HIGCQPDl0w&utm_source=copy-link">Beyond The Whistles</a></h3>
-                                <p>Kick off the season with IPL, the talk of the town!</p>
-                            </div>
-                        </div>
                     </div> 
                 </div>
-            </div> 
+            </div>    
             <hr>
             <center><h4>Season-01</h4></center>
             <hr>
