--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
             </div>
         </header><!--====== End Header Section ======-->
         <!--====== Start Hero Section ======-->
-        <section class="hero-banner-v1 position-relative">
+        <!--section class="hero-banner-v1 position-relative">
             <div class="bg-one"></div>
             <div class="bg-two"></div>
-            <!-- <div class="hero-img hero-img-one scene"><span data-depth=".5"><img src="assets/images/hero/hero-one-img-1.jpg" class="wow fadeInLeft" alt="hero image"></span></div> -->
+            <div class="hero-img hero-img-one scene"><span data-depth=".5"><img src="assets/images/hero/hero-one-img-1.jpg" class="wow fadeInLeft" alt="hero image"></span></div>>
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-1.png" alt="shape"></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-2.png" alt="shape"></span></div>
             <div class="shape shape-three scene"><span data-depth="3"><img src="assets/images/shape/shape-3.png" alt="shape"></span></div>
@@ -177,21 +177,21 @@
                     <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".5"><img src="assets/images/hero/img-9.jpg" class="wow fadeInLeft" alt="hero image"></span></div>
                 </div>
             </div>
-        </section><!--====== End Hero Section ======-->
+        </section--><!--====== End Hero Section ======-->
             <!--======= Start Register Section ======-->
-            <section class="cta-area cta-area-v1 pt-60">
+            <!--section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <change to assets/images/register.png>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Membership Drive 2023 - 24<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2><span class="sub-title">Membership Drive 2023 - 24<br><br></span></h2><span class="fill-text"></span>
                                         <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
@@ -201,12 +201,12 @@
                     </div>
                 </div>
             </section>
-<!--            <section class="cta-area cta-area-v1 pt-60">
+            <section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
-                                <!--<div class="img-holder">
+                                <div class="img-holder">
                                     <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
                                 <!--</div>-->
 <!--                            </div>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-            </section>         -->
+            </section>-->
             <!--======= End Register Section ======-->
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
@@ -368,6 +368,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
@@ -1127,7 +1129,7 @@
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/voicingthewhispers.jpg" alt="Img">
-                            <a href="Event - Voicing the whispers.html" class="portfolio-hover ">
+                            <a href="Event - Voicing the Whispers.html" class="portfolio-hover ">
                                 <div class="hover-content">
                                     <i class="far fa-external-link"></i>
                                 </div>
