--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT REC.html">CGT REC</a></h3>
+                                <h3 class="title"><a href="Event - CGT REC.html">CGT @ REC</a></h3>
                                 <a class="cat-link">25/07/2024</a>
                             </div>
                         </div>
