--- a/Verticals.html
+++ b/Verticals.html
@@ -138,7 +138,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInRight">
-                                <img src="assets/images/team/health-logo.png" alt="">
+                                <img src="assets/images/team/Accessibility logo.png" alt="">
                                
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/team/Yi-ClimateChange-REVISED.png" alt="">
+                                <img src="assets/images/team/climate change1.jpg" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/team/health-logo.png" alt="">
+                                <img src="assets/images/team/health logo.png" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/team/masoom images.png" alt="">
+                                <img src="assets/images/team/masoom logo.png" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/team/road safety.png" alt="">
+                                <img src="assets/images/team/road safety logo.png" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
@@ -271,7 +271,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/team/sports.jpg" alt="">
+                                <img src="assets/images/team/sports logo.jpg" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
