--- a/Verticals.html
+++ b/Verticals.html
@@ -138,7 +138,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInRight">
-                                <img src="assets/images/team/Accessibility logo.png" alt="">
+                                <img src="assets/images/team/Accessibility logo.jpeg" alt="">
                                
                             </div>
                         </div>
