--- a/team.html
+++ b/team.html
@@ -1778,12 +1778,12 @@
                                                 </div>-->
                                          </div>
                                         </section>
-                                    </div> 
-                                </div>``
-                                <!-- Overlay and Popup -->
-                               <div class="text text-center">
+                                   </div> 
+                                </div>
+                                <div class="text text-center">
                                     <ul class="social-link">
-                                    <h4><a><br>Madhuvanti</br></a></h4>
+                                    
+                                    <h4><a><br>Madhuvanti</a></h4>
                                     <p class="position">2022-2023</p>
                                 </div>
                             </div>
