--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
         </header><!--====== End Header Section ======-->
         <!--====== Start Hero Section ======-->
-        <!--section class="hero-banner-v1 position-relative">
+        <section class="hero-banner-v1 position-relative">
             <div class="bg-one"></div>
             <div class="bg-two"></div>
             <div class="hero-img hero-img-one scene"><span data-depth=".5"><img src="assets/images/hero/hero-one-img-1.jpg" class="wow fadeInLeft" alt="hero image"></span></div>>
@@ -177,9 +177,9 @@
                     <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".5"><img src="assets/images/hero/img-9.jpg" class="wow fadeInLeft" alt="hero image"></span></div>
                 </div>
             </div>
-        </section--><!--====== End Hero Section ======-->
+        </section><!--====== End Hero Section ======-->
             <!--======= Start Register Section ======-->
-            <!--section class="cta-area cta-area-v1 pt-60">
+            <section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
@@ -201,15 +201,14 @@
                     </div>
                 </div>
             </section>
-            <section class="cta-area cta-area-v1 pt-60">
+            <!--<section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
                                     <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
-                                <!--</div>-->
-<!--                            </div>
+<!--                           </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
@@ -222,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-            </section>-->
+            </section>
             <!--======= End Register Section ======-->
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
