--- a/contact.html
+++ b/contact.html
@@ -244,8 +244,8 @@
                                             </div>
                                             <div class="info">
                                                 <h4>Phone Number</h4>
-                                                <p><a href="tel:9841937389">Linghesh - 9841937389</a></p>
-                                                <p><a href="tel:9894376855">Nandhini - 9894376855</a></p>
+                                                <p><a href="tel:9841937389">Linghesh B - 9841937389</a></p>
+                                                <p><a href="tel:9894376855">Nandhini R - 9894376855</a></p>
                                             </div>
                                         </div>
                                     </div>
