--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
         </section><!--====== End Hero Section ======-->
             <!--======= Start Register Section ======-->
-            <section class="cta-area cta-area-v1 pt-60">
+            <!--section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
@@ -208,7 +208,8 @@
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
                                     <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
-<!--                           </div>
+                                <!--/div>
+                            </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
@@ -221,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section-->
             <!--======= End Register Section ======-->
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
