--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/cover image.JPG" alt="Img">
+                                <img src="assets/images/Events/CGT 5.0 OUT/cover image.JPG" alt="Img">
                                 <a href="Event - CGT 5.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
