--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@
                                             <div class="info">
                                                 <h4>Location</h4>
                                                 <a href="https://www.google.com/maps/place/Rajalakshmi+Engineering+College/@13.0085334,80.0008946,17z/data=!3m1!4b1!4m6!3m5!1s0x3a528c9ebac84723:0x18e2bf88dfefa3ed!8m2!3d13.0085334!4d80.0034695!16s%2Fm%2F0cn_c1y?entry=ttu">
-                                                    <p>Rajalakshmi Engineering College, Rajalakshmi Nagar Thandalam, Chennai - 602 105</p></a>
+                                                    <p>Rajalakshmi Engineering College, Rajalakshmi Nagar, Thandalam, Chennai - 602 105</p></a>
                                             </div>
                                         </div>
                                     </div>
