--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </section>
         <!--====== End About Section ======-->
             <!--====== Start CTA Section ======-->
-            <section class="cta-area cta-area-v1 pt-130">
+            <!--section class="cta-area cta-area-v1 pt-130">
                 <div class="container-1450">
                     <div class="cta-wrapper dark-blue-bg">
                         <div class="cta-img wow fadeInDown "><img src="assets/images/cta/img-1.jpg" alt=""></div>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section-->
         <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
@@ -323,7 +323,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/CGT 5.0 OUT/cover image.JPG" alt="Img">
+                                <img src="assets/images/Events/cover image.JPG" alt="Img">
                                 <a href="Event - CGT 5.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
