--- a/team.html
+++ b/team.html
@@ -682,7 +682,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/team/sriharini (1).jpg" alt="">
+                                <img src="assets/images/team/sri harini.png" alt="">
                             </div>
                             <div class="text text-center">
                                
