--- a/team.html
+++ b/team.html
@@ -586,7 +586,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/team/Nithish Kumar.png" alt="">
+                                <img src="assets/images/team/nithish kumar1.png" alt="">
                             </div>
                             <div class="text text-center">
                                 
