--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/CGT 5.0 REC.JPG" alt="Img">
+                                <img src="assets/images/portfolio/CGT 5.0 REC 1.png" alt="Img">
                                 <a href="Event - CGT REC.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
