--- a/podcast.html
+++ b/podcast.html
@@ -133,7 +133,7 @@
         <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <hr>
-            <center><h2>Season-02</h2></center>
+            <span class="sub-title st-one">Season-02</span> 
             <hr>
             <div class="container">   
                 <div class="row portfolio-grid">
