--- a/podcast.html
+++ b/podcast.html
@@ -350,13 +350,13 @@
                         </div>
                     </div> 
                 </div>
-            </div>    
-            <hr>
-            <center><h2>Season-01</h2></center>
-            <hr>
+            </div>   
             <div class="container">   
                 <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
+                         <div class="section-title text-center mb-55 wow fadeInUp">
+                            <span class="sub-title st-one">Season-02</span>                       
+                        </div>
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/12.PNG" alt="Img">
