--- a/podcast.html
+++ b/podcast.html
@@ -132,13 +132,12 @@
         <!--====== End Page-banner section ======-->
         <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
-            <hr>
-            <span class="sub-title st-one">Season-02</span> 
-            <hr>
             <div class="container">   
                 <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="section-title text-center mb-55 wow fadeInUp">
+                            <span class="sub-title st-one">Meet Our Team</span>
                             <div class="img-holder">
                                 <img src="assets/images/podcast/Podcast s-02 ep-10.png" alt="Img">
                                 <a href="https://open.spotify.com/episode/5lD81i1wNGzoipqOlJmACI?si=5tORcV6XQlGMS7xCFjFtwQ&utm_source=copy-link" class="portfolio-hover">
