--- a/podcast.html
+++ b/podcast.html
@@ -353,6 +353,7 @@
 
                 
                 <div class="row portfolio-grid">
+                    <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
                     <div class="section-title text-center mb-55 wow fadeInUp">
                     <span class="sub-title st-one">Season-02</span>
                 </div>
