--- a/podcast.html
+++ b/podcast.html
@@ -131,7 +131,10 @@
         </section>
         <!--====== End Page-banner section ======-->
         <!--====== Start Portfolio Section ======-->
-        <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
+         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
+                    <div class="section-title text-center mb-55 wow fadeInUp">
+                    <span class="sub-title st-one">Season-02</span>
+                </div>
             <div class="container">   
                 <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
@@ -351,7 +354,7 @@
             </div>  
             <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
                     <div class="section-title text-center mb-55 wow fadeInUp">
-                    <span class="sub-title st-one">Season-02</span>
+                    <span class="sub-title st-one">Season-01</span>
                 </div>
             <div class="container">
                 <div class="row portfolio-grid">
