--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row portfolio-grid">
+<!--                 </div>
+                <div class="row portfolio-grid"> -->
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
