--- a/Gallery.html
+++ b/Gallery.html
@@ -583,8 +583,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Build And Connect/img 6.jpg" alt=""><a href="assets/images/Events/Build And Connect/img 6.jpg" class="portfolio-hover img-popup"></a>
-                            </div>
+                                 <img src="assets/images/Events/Build And Connect/img 6.png" alt="">
+                                <a href="assets/images/Events/Build And Connect/img 6.png" class="portfolio-hover img-popup"></a>
                         </div>
                     </div>
                     
@@ -634,8 +634,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Build And Connect/img 4.jpg" alt=""><a href="assets/images/Events/Build And Connect/img 4.jpg" class="portfolio-hover img-popup"></a>
-                            </div>
+                                <img src="assets/images/Events/Build And Connect/img 4.png" alt="">
+                                <a href="assets/images/Events/Build And Connect/img 4.png" class="portfolio-hover img-popup"></a>
                         </div>
                     </div>
                     
