--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="page-banner-img">
-                            <img src="assets/images/about/img-8.jpg" alt="">
+                           <img src="assets/images/about/img-8.png" alt="">
                         </div>
                     </div>
                 </div>
