Update Event - Walk Along 2.0.html

--- a/Event - Walk Along 2.0.html
+++ b/Event - Walk Along 2.0.html
@@ -220,7 +220,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Walk Along 2.0/WA-02.jpg" alt="">
+                                <img src="assets/images/Events/Walk Along 2.0/WA-07(1).png" alt="">
                             </div>
                             
                         </div>
@@ -228,7 +228,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Walk Along 2.0/WA-03.JPG" alt="">
+                                <img src="assets/images/Events/Walk Along 2.0/WA-09.png" alt="">
                             </div>
                            
                         </div>
@@ -243,7 +243,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".25s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Walk Along 2.0/WA-05.jpg" alt="">
+                                <img src="assets/images/Events/Walk Along 2.0/WA-08(1).png" alt="">
                             </div>
                         </div>
                     </div>
