Update Event - CGT 5.0.html

--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -227,7 +227,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/CGT 5.0 OUT/1.png" alt="">
+                                <img src="assets/images/Events/CGT 5.0 OUT/8.JPG" alt="">
                             </div>
                             
                         </div>
