--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
+                                <h3 class="title"><a href="Event - CGT 5.0.html">Chennai's Got Talent 5.0</a></h3>
                                 <a class="cat-link">18/08/2024</a>
                             </div>
                         </div>
