--- a/Initiatives.html
+++ b/Initiatives.html
@@ -45,7 +45,7 @@
                     <h5 class="panel-widget-title">Contact Us</h5>
                     <ul>
                         <li>
-                            <i class="fal fa-map-marker-alt"></i>Rajalakshmi Engineering College, Rajalakshmi Nagar Thandalam, Chennai - 602 105.
+                            <i class="fal fa-map-marker-alt"></i>Rajalakshmi Engineering College, Rajalakshmi Nagar, Thandalam, Chennai - 602 105.
                         </li>
                         <li>
                             <i class="fal fa-envelope-open"></i>
