--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Walk Along 2.0 Cover.jpg" alt="Img">
+                                <img src="assets/images/portfolio/Walk Along 2.0.png" alt="Img">
                                 <a href="Event - Walk Along 2.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
