--- a/Event - Eco Arcade.html
+++ b/Event - Eco Arcade.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>School Students</p>
+                                <p>Community Children in need</p>
                             </div>
                         </div>
                     </div>
