--- a/Initiatives.html
+++ b/Initiatives.html
@@ -229,6 +229,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".50s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/yuva olympics.png" alt="Img">
+                                <a href="Event - Yuva Olympics.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Yuva Olympics.html">Yuva Olympics</a></h3>
+                                <a class="cat-link">07/07/2024</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
